<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <Button
            android:text="@string/custom_view_listeners"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/customListenersButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/customRxButton"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/custom_view_rxjava"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/customRxButton"
            app:layout_constraintTop_toBottomOf="@+id/customListenersButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/standardListenersButton"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/standard_view_listeners"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/standardListenersButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/standardRxButton"
            app:layout_constraintTop_toBottomOf="@+id/customRxButton"/>
    <Button
            android:text="@string/standard_view_rxjava"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/standardRxButton"
            app:layout_constraintTop_toBottomOf="@+id/standardListenersButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>